[workspace]
members = ["cli", "grep", "main", "searcher"]

resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Volodymyr Dotsenko <volodymyrdotsenko@gmail.com>"]
description = """
"""
repository = "https://github.com/volodymyrd/cmt"
license = "Unlicense OR MIT"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.5.8", features = ["cargo"] }
cmt-cli = { path = "cli", version = "=0.1.0" }
